@startuml
skinparam defaultFontName Arial
skinparam backgroundColor white

title ER-диграмма базы знаний советов «Умный кошелёк»

entity "Advice\n(Совет)" as ADV {
  * идентификатор : string <<PK>>
  --
  * название : string
  * описание : text
  * категория : string <<FK>>
}

entity "AdviceCategory\n(Тип категории)" as ACAT {
  * идентификатор_категории : string <<PK>>
  --
  * тип : enum {categorical, common}
}

entity "Transaction\n(Транзакция)" as TX {
  * идентификатор : uuid <<PK>>
  --
  * категория : string <<FK>>
  * сумма : float
  * дата_создания : datetime
}

entity "User\n(Пользователь)" as USR {
  * идентификатор_пользователя : integer <<PK>>
  --
  * баланс : float
  * последнее_действие : datetime
}

entity "GiveAdviceUseCase\n(Решатель советов)" as GA {
  * запрос : category_id
  --
  * результат : advice.description
}

ACAT ||--o{ ADV
ADV }o--|| GA
TX }o--|| GA
TX }o--|| USR
GA --> USR

@enduml